Complete screenCurrent and screenLast feature and rounding result feature

--- a/style.css
+++ b/style.css
@@ -28,3 +28,8 @@ button {
 #clearBtn, #equalsBtn, #pointBtn {
     width: 165px;
 }
+
+#screenLast, #screenCurrent {
+    height: 50px;
+    border: 1px solid black;
+}
